[WIP] Affixes rewrite continues, compilable